--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^2.4.2",
     "cli-progress": "^3.3.1",
     "deepmerge": "^4.1.1",
+    "fuzzbuzz": "^2.0.0",
     "mkdirp": "^0.5.1",
     "ora": "^4.0.2",
     "yargs": "^14.2.0"
