--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "tape": "^4.11.0"
-  },
   "dependencies": {
     "chalk": "^2.4.2",
     "cli-progress": "^3.3.1",
     "deepmerge": "^4.1.1",
     "fuzzbuzz": "^2.0.0",
     "mkdirp": "^0.5.1",
+    "tape": "^4.11.0",
     "yargs": "^14.2.0"
   }
 }
