--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reference-fuzzer",
+  "name": "fuzz-lightyear",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.2",
     "cli-progress": "^3.3.1",
