--- a/test.js.template
+++ b/test.js.template
@@ -1,6 +1,6 @@
 const p = require('path')
 const test = require('tape')
-const testSetup = require('reference-fuzzer/test')
+const testSetup = require('fuzz-lightyear/test')
 
 async function getObjects () {
   const testingModule = require('{{ modulePath }}')
